--- a/THE UNREAD ARCHIVE ~ FINAL/about.html
+++ b/THE UNREAD ARCHIVE ~ FINAL/about.html
@@ -48,6 +48,8 @@
     .site-logo img {
       height: 50px;
       background-color: #fff;
+      border-radius: 6px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.4);
     }
     /* Branding block for logo + tagline */
     .branding {
