--- a/THE UNREAD ARCHIVE ~ FINAL/book.html
+++ b/THE UNREAD ARCHIVE ~ FINAL/book.html
@@ -47,6 +47,8 @@
     }
     .site-logo img {
       height: 50px;
+      border-radius: 6px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.4);
       background-color: #fff;
     }
     /* Branding block for logo + tagline */
@@ -321,7 +323,7 @@
     <div class="book-card">
       <img src="./the way of nagomi.jpg" alt="The Way of Nagomi book cover">
       <div class="book-info">
-        <h3><a href="https://www.amazon.com/Way-Nagomi-Japanese-Balance-Harmony/dp/0593544917" target="_blank">The Way of Nagomi</a></h3>
+        <h3>The Way of Nagomi</h3>
         <p>
           Explains a unique Japanese concept that can help us find and practice a relaxed, effortless form of balance in various areas of life, from food and health to relationships, creativity, and even with ourselves.
         </p>
@@ -331,7 +333,7 @@
     <div class="book-card">
       <img src="https://covers.openlibrary.org/b/id/14896542-L.jpg" alt="The Algebra of Wealth book cover">
       <div class="book-info">
-        <h3><a href="https://www.amazon.com/Algebra-Wealth-Scott-Galloway/dp/0593716181" target="_blank">The Algebra of Wealth</a></h3>
+        <h3>The Algebra of Wealth</h3>
         <p>
           A college professor and serial entrepreneur’s personal formula for achieving financial freedom based on focus, Stoicism, time, and diversification, helping you eliminate economic anxiety through well-paid work, diversified investments, and strong financial habits.
         </p>
@@ -341,7 +343,7 @@
     <div class="book-card">
       <img src="./a tale of two cities.jpg" alt="A Tale of Two Cities book cover">
       <div class="book-info">
-        <h3><a href="https://www.gutenberg.org/ebooks/98" target="_blank">A Tale of Two Cities</a></h3>
+        <h3>A Tale of Two Cities</h3>
         <p>
           Follows two connected families in 18th-century London and Paris, exploring love, loss, murder, and intrigue, while teaching lessons about history, ethics, and human relationships.
         </p>
@@ -351,7 +353,7 @@
     <div class="book-card">
       <img src="./the alchemist.jpg" alt="Alchemy book cover">
       <div class="book-info">
-        <h3><a href="https://www.amazon.com/Alchemy-Surprising-Power-Ideas-Sense/dp/006238841X" target="_blank">Alchemy</a></h3>
+        <h3>Alchemy</h3>
         <p>
           A guide to making magic happen in business and life by teaching you how to practice irrational thinking to stand out and discover powerful solutions to your own and others’ problems.
         </p>
@@ -361,7 +363,7 @@
     <div class="book-card">
       <img src="./in cold blood.jpg" alt="In Cold Blood book cover">
       <div class="book-info">
-        <h3><a href="https://www.amazon.com/Cold-Blood-True-Account-Multiple/dp/0679745580" target="_blank">In Cold Blood</a></h3>
+        <h3>In Cold Blood</h3>
         <p>
           A groundbreaking “nonfiction novel” that narrates how Dick Hickock and Perry Smith conspired, murdered the Clutter family in Kansas in 1959, and how the police eventually brought them to justice in 1965.
         </p>
@@ -371,7 +373,7 @@
     <div class="book-card">
       <img src="./no hard feelings.jpg" alt="No Hard Feelings book cover">
       <div class="book-info">
-        <h3><a href="https://www.amazon.com/No-Hard-Feelings-Emotions-Smart/dp/0525533834" target="_blank">No Hard Feelings</a></h3>
+        <h3>No Hard Feelings</h3>
         <p>
           A practical guide to managing the emotional side of work and building resilience by regaining motivation, handling stress, and improving overall performance across career paths.
         </p>
