--- a/THE UNREAD ARCHIVE ~ FINAL/home.html
+++ b/THE UNREAD ARCHIVE ~ FINAL/home.html
@@ -50,6 +50,7 @@
       height: 55px;
       border-radius: 6px;
       box-shadow: 0 0 8px rgba(0,0,0,0.4);
+      background-color: #fff;
     }
     /* Branding block */
     .branding {
@@ -124,6 +125,7 @@
       justify-content: space-between;
       align-items: center;
       gap: 30px;
+      font-size: large;
     }
     .nav-left, .nav-right {
       display: flex;
