--- a/THE UNREAD ARCHIVE ~ FINAL/about.html
+++ b/THE UNREAD ARCHIVE ~ FINAL/about.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Unread Archive | About</title>
   <style>
-    /* Reset */
     * {
       margin: 0;
       padding: 0;
@@ -19,9 +18,8 @@
       display: flex;
       flex-direction: column;
       background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-      overflow-x: hidden; /* ✅ allow scrolling but hide horizontal overflow */
+      overflow-x: hidden; 
     }
-    /* Tiny stars animation */
     body::before {
       content: '';
       position: absolute;
@@ -36,7 +34,6 @@
       from { transform: translateY(0); }
       to { transform: translateY(-100px); }
     }
-    /* ---------------- HEADER ---------------- */
     header {
       display: flex;
       align-items: center;
@@ -51,7 +48,6 @@
       border-radius: 6px;
       box-shadow: 0 0 8px rgba(0,0,0,0.4);
     }
-    /* Branding block for logo + tagline */
     .branding {
       display: flex;
       flex-direction: column;
@@ -72,7 +68,6 @@
       margin-top: 2px;
       justify-content: center;
     }
-    /* Profile */
     .profile {
       position: relative;
       display: inline-block;
@@ -105,7 +100,6 @@
     .profile:hover .profile-dropdown {
       display: block;
     }
-    /* ------------------ NAV ------------------ */
     nav {
       width: 100%;
       box-shadow: 0 2px 6px rgba(0,0,0,0.5);
@@ -140,7 +134,6 @@
       background: rgba(255,255,255,0.1);
       border-radius: 6px;
     }
-    /* Search box */
     .search-box {
       position: absolute;
       right: 20px;
@@ -153,18 +146,11 @@
       font-size: 0.9em;
       text-align: right;
     }
-    /* ------------------ MAIN ------------------ */
-
-  /* ------------------ MAIN ------------------ */
-    
-    /* ------------------ LAYOUT ------------------ */
-    /* Main wrapper like an open book */
     .book-section {
       display: flex;
       justify-content: center;
       padding: 40px;
     }
-
     .book-wrapper {
       display: grid;
       grid-template-columns: 1fr 1fr; /* left & right page */
@@ -177,8 +163,6 @@
       position: relative;
       overflow: hidden;
     }
-
-    /* Center spine */
     .book-wrapper::before {
       content: "";
       position: absolute;
@@ -189,8 +173,6 @@
       background: #c9c3b8;
       box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
     }
-
-    /* Page styling */
     .book-page {
       padding: 30px;
       line-height: 1.7;
@@ -198,18 +180,12 @@
       font-size: 1rem;
       background: linear-gradient(to bottom, #fff, #f9f7f2);
     }
-
-    /* Left page alignment */
     .left-page {
       border-right: 1px solid rgba(0,0,0,0.1);
     }
-
-    /* Right page alignment */
     .right-page {
       border-left: 1px solid rgba(0,0,0,0.1);
     }
-
-    /* Headings */
     .book-page header h2 {
       font-size: 1.6rem;
       color: #3b3b3b;
@@ -218,13 +194,9 @@
       margin-bottom: 15px;
       font-family: "Georgia", serif;
     }
-
-    /* Paragraphs */
     .book-page p {
       margin-bottom: 15px;
     }
-
-    /* Responsive: stack like scroll */
     @media (max-width: 900px) {
       .book-wrapper {
         grid-template-columns: 1fr;
@@ -236,23 +208,21 @@
         border: none;
       }
     }
-
-    /* ------------------ FOOTER ------------------ */
     footer {
       text-align: center;
       padding: 20px;
       font-size: 0.9em;
-      margin-top: auto;      /* ✅ keeps footer at bottom */
-      background: #111;      /* dark solid footer background */
-      color: #fdfdfd;        /* white text */
+      margin-top: auto;     
+      background: #111;    
+      color: #fdfdfd;      
       position: relative;
       bottom: 0;
       left: 0;
       width: 100%;
     }
     footer a {
-      color: #111;         /* dark text */
-      background: #ffda79; /* yellow background */
+      color: #111;         
+      background: #ffda79; 
       padding: 5px 12px;
       border-radius: 20px;
       text-decoration: none;
@@ -264,19 +234,16 @@
   </style>
 </head>
 <body>
-  <!-- HEADER -->
   <header>
     <div class="site-logo">
       <a href="./index.html">
         <img src="./ChatGPT Image Sep 25, 2025, 10_46_26 AM.png" alt="The Unread Archive logo">
       </a>
     </div>
-    <!-- Branding block -->
     <div class="branding">
       <div class="logo">✉ THE UNREAD ARCHIVE</div>
       <p class="tagline">Your digital sanctuary for timeless words.</p>
     </div>
-    <!-- Profile -->
     <div class="profile">
       <img src="https://cdn-icons-png.flaticon.com/512/847/847969.png" alt="Profile icon" class="profile-icon">
       <div class="profile-dropdown" role="menu">
@@ -285,7 +252,6 @@
       </div>
     </div>
   </header>
-  <!-- NAVIGATION -->
   <nav>
     <div class="nav-container">
       <div class="nav-left">
@@ -303,14 +269,9 @@
       </div>
     </div>
   </nav>
-  <!-- MAIN SECTION -->
- <!-- MAIN SECTION -->
   <main>
-    <!-- About Section -->
     <section class="book-section">
       <div class="book-wrapper">
-
-        <!-- Left Page -->
         <article class="book-page left-page">
           <header>
             <h2>Welcome to The Unread Archive</h2>
@@ -330,8 +291,6 @@
             cherished, and lived.
           </p>
         </article>
-
-        <!-- Right Page -->
         <aside class="book-page right-page">
           <header>
             <h2>Discover & Contribute</h2>
@@ -351,13 +310,9 @@
             imagination where every contribution enriches the whole.
           </p>
         </aside>
-
       </div>
     </section>
   </main>
-
-
-  <!-- FOOTER -->
   <footer>
     <p>
       Contact us: 
