--- a/THE UNREAD ARCHIVE ~ FINAL/archive.html
+++ b/THE UNREAD ARCHIVE ~ FINAL/archive.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Unread Archive | Archive</title>
   <style>
-    /* Reset */
     * {
       margin: 0;
       padding: 0;
@@ -21,7 +20,6 @@
       background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
       overflow-x: hidden;
     }
-    /* Tiny stars animation */
     body::before {
       content: '';
       position: absolute;
@@ -37,7 +35,6 @@
       from { transform: translateY(0); }
       to { transform: translateY(-100px); }
     }
-    /* ---------------- HEADER ---------------- */
     header {
       display: flex;
       align-items: center;
@@ -71,7 +68,6 @@
       letter-spacing: 0.5px;
       margin-top: 2px;
     }
-    /* Profile */
     .profile {
       position: relative;
       display: inline-block;
@@ -104,15 +100,12 @@
     .profile:hover .profile-dropdown {
       display: block;
     }
-    /* ------------------ NAV ------------------ */
-    nav {
+        nav {
       width: 100%;
       box-shadow: 0 2px 6px rgba(0,0,0,0.5);
       position: sticky;
       top: 0;
       z-index: 900;
-      background: rgba(0,0,0,0.6);
-      backdrop-filter: blur(6px);
     }
     .nav-container {
       max-width: 1200px;
@@ -141,7 +134,6 @@
       background: rgba(255,255,255,0.1);
       border-radius: 6px;
     }
-    /* Search box */
     .search-box {
       position: absolute;
       right: 20px;
@@ -154,17 +146,14 @@
       font-size: 0.9em;
       text-align: right;
     }
-    /* ------------------ MAIN ------------------ */
     .main {
       display: grid;
       grid-template-columns: 260px 1fr;
       gap: 24px;
-      padding: 20px 40px 20px 20px; /* ✅ extra right padding */
+      padding: 20px 40px 20px 20px; 
       position: relative;
       z-index: 1;
     }
-
-    /* Sidebar - improved */
     .sidebar {
       position: sticky;
       top: 18px;
@@ -199,31 +188,29 @@
       background: rgba(255, 218, 121, 0.1);
       color: #ffda79;
     }
-
-    /* Feed */
     .feed {
       display: grid;
       grid-template-columns: repeat(2,1fr);
-      gap: 24px; /* ✅ bigger gap between cards */
-      margin-right: 20px; /* ✅ space from right edge */
+      gap: 24px; 
+      margin-right: 20px; 
     }
     .card {
       background: #fff;
       color: #111;
       border: 1px solid #eef0f3;
-      border-radius: 14px; /* ✅ softer rounded corners */
+      border-radius: 14px; 
       overflow: hidden;
       display: flex;
       flex-direction: column;
       min-height: 240px;
       padding: 12px; /* ✅ inner padding */
-      box-shadow: 0 6px 18px rgba(0,0,0,0.15); /* ✅ subtle shadow */
+      box-shadow: 0 6px 18px rgba(0,0,0,0.15); 
     }
     .card .media {
       height: 140px;
       background-size: cover;
       background-position: center;
-      border-radius: 10px; /* ✅ rounded top image corners */
+      border-radius: 10px; 
     }
     .card .body {
       padding: 14px;
@@ -250,17 +237,12 @@
       font-weight: 600;
       cursor: pointer;
     }
-
-    /* Responsive */
     @media (max-width:900px){
       .main{grid-template-columns:1fr;}
       .feed{grid-template-columns:repeat(1,1fr)}
       .sidebar{position:relative; max-width:100%;}
     }
-
     .flex{display:flex;gap:8px;align-items:center}
-
-    /* ------------------ FOOTER ------------------ */
     footer {
       text-align: center;
       padding: 20px;
@@ -285,7 +267,6 @@
   </style>
 </head>
 <body>
-  <!-- HEADER -->
   <header>
     <div class="site-logo">
       <a href="./index.html">
@@ -304,8 +285,6 @@
       </div>
     </div>
   </header>
-
-  <!-- NAVIGATION -->
   <nav>
     <div class="nav-container">
       <div class="nav-left">
@@ -323,8 +302,6 @@
       </div>
     </div>
   </nav>
-
-  <!-- MAIN SECTION -->
   <main class="container main">
     <aside class="sidebar">
       <div class="filters">
@@ -338,7 +315,6 @@
         </div>
       </div>
     </aside>
-
     <section>
       <div class="feed" aria-live="polite">
         <!-- Cards -->
@@ -355,7 +331,6 @@
             </div>
           </div>
         </article>
-
         <article class="card">
           <div class="media" style="background-image:url('https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?q=80&w=1200&auto=format&fit=crop')"></div>
           <div class="body">
@@ -369,7 +344,6 @@
             </div>
           </div>
         </article>
-
         <article class="card">
           <div class="media" style="background-image:url('https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?q=80&w=1200&auto=format&fit=crop')"></div>
           <div class="body">
@@ -383,7 +357,6 @@
             </div>
           </div>
         </article>
-
         <article class="card">
           <div class="media" style="background-image:url('https://images.unsplash.com/photo-1524985069026-dd778a71c7b4?q=80&w=1200&auto=format&fit=crop')"></div>
           <div class="body">
@@ -400,8 +373,6 @@
       </div>
     </section>
   </main>
-
-  <!-- FOOTER -->
   <footer>
     <p>
       Contact us:
