post final change2

--- a/THE UNREAD ARCHIVE ~ FINAL/about.html
+++ b/THE UNREAD ARCHIVE ~ FINAL/about.html
@@ -153,7 +153,7 @@
     }
     .book-wrapper {
       display: grid;
-      grid-template-columns: 1fr 1fr; /* left & right page */
+      grid-template-columns: 1fr 1fr; 
       max-width: 1000px;
       width: 100%;
       background: #fdfcf7;
@@ -202,7 +202,7 @@
         grid-template-columns: 1fr;
       }
       .book-wrapper::before {
-        display: none; /* hide spine */
+        display: none; 
       }
       .left-page, .right-page {
         border: none;
