--- a/THE UNREAD ARCHIVE ~ FINAL/home.html
+++ b/THE UNREAD ARCHIVE ~ FINAL/home.html
@@ -18,9 +18,8 @@
       display: flex;
       flex-direction: column;
       background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-      overflow-x: hidden; /* ✅ hide horizontal overflow */
+      overflow-x: hidden; 
     }
-    /* Tiny stars animation */
     body::before {
       content: '';
       position: fixed;
@@ -68,7 +67,6 @@
       color: #cccccc;
       letter-spacing: 0.5px;
     }
-    /* Profile */
     .profile {
       position: relative;
       display: inline-block;
