--- a/THE UNREAD ARCHIVE ~ FINAL/archive.html
+++ b/THE UNREAD ARCHIVE ~ FINAL/archive.html
@@ -160,8 +160,8 @@
       background: rgba(20, 20, 25, 0.95);
       padding: 20px;
       margin: 0 0 20px 0;
-      border-radius: 16px; /* ✅ rounder corners */
-      box-shadow: 0 6px 18px rgba(0,0,0,0.35); /* ✅ stronger shadow */
+      border-radius: 16px; 
+      box-shadow: 0 6px 18px rgba(0,0,0,0.35); 
       color: #fdfdfd;
       font-size: 16px;
       border: 1px solid rgba(255,255,255,0.1);
